CSS not working
Added <html> element and doctype

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html>
+
 <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina|Open+Sans" rel="stylesheet">
 
 <H1>David Preiss</H1>
@@ -105,3 +108,5 @@
 
 
 </div>
+
+</html>
