--- a/index.html
+++ b/index.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Personal Portfolio Website</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina|Open+Sans" rel="stylesheet">
+  </head>
 
-<link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina|Open+Sans" rel="stylesheet">
-
+<body>
+<div class="guide">
 <H1>David Preiss</H1>
-<H2>Product Development Engineer</H2>
+<H4>These are some of the engineering projects that I have worked on:</H4>
+</div>
 
-<p href="" data-rel="all">All</p>
-<p data-rel="professional">Professional</p>
-<p data-rel="personal">Personal</p>
-<div style="clear:both;"></div>
 <div id="portfolio">
+<p href="" data-rel="all" id="allbutton">All</p>
+<p data-rel="professional" id="professionalbutton">Professional</p>
+<p data-rel="personal" id="personalbutton">Personal</p>
+<div style="clear:both;"></div>
 
+
+  
   <div class="tile professional all">
-    <img class="thumbnail" alt="#" src="https://s3.amazonaws.com/portfoliowebsite/6+in+Indexer/6+Indexer+Newel.jpg">
+    <img class="thumbnail" alt="#" src="https://s3.amazonaws.com/portfoliowebsite/6+in+Indexer/6+Indexer+Newel.jpg" name="6Indexer">
 
     <div class="thumbnailTitle">
       <figcaption>Desktop MAX 6" Indexer</figcaption>
@@ -35,10 +44,10 @@
   </div>
 
   <div class="tile professional all">
-    <a href="#"><img class="thumbnail" alt="#" src="https://s3.amazonaws.com/portfoliowebsite/EOT/EOT+Cutting.gif"></a>
+    <a href="#"><img class="thumbnail" alt="#" src="https://s3.amazonaws.com/portfoliowebsite/EOT/EOT+Cutting+Still.jpg" id="EOT"></a>
 
     <div class="thumbnailTitle">
-      <figcaption>Oscillating Tangential Cutting Knife</figcaption>
+      <figcaption>Oscillating Tangential Knife</figcaption>
       <div class="thumbnailSubText">
         <figcaption>Integration of ECOCAM's EOT3 with ShopBot's gantry tools/control software.</figcaption>
       </div>
@@ -67,7 +76,7 @@
   </div>
 
   <div class="tile professional all">
-    <a href="#"><img class="thumbnail" alt="#" src="https://s3.amazonaws.com/portfoliowebsite/Moku/Moku+132.gif"></a>
+    <a href="#"><img class="thumbnail" alt="#" src="https://s3.amazonaws.com/portfoliowebsite/Moku/Moku+Full+Static.JPG" id="moku"></a>
     <div class="thumbnailTitle">
       <figcaption>Sunglasses Manufacturing</figcaption>
       <div class="thumbnailSubText">
@@ -77,7 +86,7 @@
   </div>
 
   <div class="tile personal all">
-    <a href="#"><img class="thumbnail" alt="#" src="https://s3.amazonaws.com/portfoliowebsite/Nelson+Bench/Nelson+Machining.gif"></a>
+    <a href="#"><img class="thumbnail" alt="#" src="https://s3.amazonaws.com/portfoliowebsite/Nelson+Bench/Nelson+Machining+Static.jpg" id="nelson"></a>
     <div class="thumbnailTitle">
       <figcaption>Nelson Bench</figcaption>
       <div class="thumbnailSubText">
@@ -87,7 +96,7 @@
   </div>
 
   <div class="tile professional all">
-    <a href="#"><img class="thumbnail" alt="#" src="https://s3.amazonaws.com/portfoliowebsite/PSZZP/PSZZP+FZZP.gif"></a>
+    <a href="#"><img class="thumbnail" alt="#" src="https://s3.amazonaws.com/portfoliowebsite/PSZZP/PSZZP+FZZP+Static.jpg" id="pszzp"></a>
     <div class="thumbnailTitle">
       <figcaption>Pressure Sensetive Z-Zero Plate</figcaption>
       <div class="thumbnailSubText">
@@ -108,5 +117,8 @@
 
 
 </div>
+  
+   <script src="js/index.js"></script>
 
+</body>
 </html>
