--- a/index.html
+++ b/index.html
@@ -8,114 +8,123 @@
   </head>
 
 <body>
-<div class="guide">
-<H1>David Preiss</H1>
-<H4>These are some of the engineering projects that I have worked on:</H4>
-</div>
-
-<div id="portfolio">
-<p href="" data-rel="all" id="allbutton">All</p>
-<p data-rel="professional" id="professionalbutton">Professional</p>
-<p data-rel="personal" id="personalbutton">Personal</p>
-<div style="clear:both;"></div>
+<div class="container">
+  <div class="sidebar">
 
 
-  
-  <div class="tile professional all">
-    <img class="thumbnail" alt="#" src="https://s3.amazonaws.com/portfoliowebsite/6+in+Indexer/6+Indexer+Newel.jpg" name="6Indexer">
+    <img class="sidebarImage" alt="#" src="https://s3.amazonaws.com/portfoliowebsite/Misc/Portriat.jpg" title="Art by Zoe">
 
-    <div class="thumbnailTitle">
-      <figcaption>Desktop MAX 6" Indexer</figcaption>
-      <div class="thumbnailSubText">
-        <figcaption>Design and production of a rotary axis for the Desktop MAX.</figcaption>
-      </div>
+        <H1>David Preiss</H1>
+    
+    <div class="sidebarLinks">
+      <a>davepreiss@gmail.com</a>
+      <a href="https://github.com/davepreiss" target="_blank"> Github <br></a>
+      <a> <br>I am a mechanical engineer living in Durham, NC. My interests are in product development, digital fabrication, and DIY projects of all kinds!</a>
     </div>
   </div>
 
+  <div id="portfolio">
+    <p href="" data-rel="all" id="allbutton">All</p>
+    <p data-rel="professional" id="professionalbutton">Professional</p>
+    <p data-rel="personal" id="personalbutton">Personal</p>
+    <div style="clear:both;"></div>
 
-  <div class="tile personal all">
-    <img class="thumbnail" alt="#" src="https://s3.amazonaws.com/portfoliowebsite/Desk/Desk+Assembled.jpg">
-    <div class="thumbnailTitle">
-      <figcaption>Parametric Desk</figcaption>
-      <div class="thumbnailSubText">
-        <figcaption>Parametric design of a customizable CNC desk.</figcaption>
+    <div class="tile professional all">
+     <img class="thumbnail" alt="#" src="https://s3.amazonaws.com/portfoliowebsite/Moku/Moku+Full+Static.JPG" id="moku">
+      <div class="thumbnailTitle">
+        <figcaption>Sunglasses Manufacturing</figcaption>
+        <div class="thumbnailSubText">
+          <figcaption>Turnkey CNC solution for company manufacturing wooden sunglasses.</figcaption>
+        </div>
       </div>
     </div>
-  </div>
+    
+    <div class="tile professional all">
+      <img class="thumbnail" alt="#" src="https://s3.amazonaws.com/portfoliowebsite/6+in+Indexer/6+Indexer+Newel.jpg" name="6Indexer">
 
-  <div class="tile professional all">
-    <a href="#"><img class="thumbnail" alt="#" src="https://s3.amazonaws.com/portfoliowebsite/EOT/EOT+Cutting+Still.jpg" id="EOT"></a>
-
-    <div class="thumbnailTitle">
-      <figcaption>Oscillating Tangential Knife</figcaption>
-      <div class="thumbnailSubText">
-        <figcaption>Integration of ECOCAM's EOT3 with ShopBot's gantry tools/control software.</figcaption>
+      <div class="thumbnailTitle">
+        <figcaption>Desktop MAX 6" Indexer</figcaption>
+        <div class="thumbnailSubText">
+          <figcaption>Design and production of a rotary axis for the Desktop MAX.</figcaption>
+        </div>
       </div>
     </div>
 
-  </div>
 
-  <div class="tile professional all">
-    <a href="#"><img class="thumbnail" alt="#" src="https://s3.amazonaws.com/portfoliowebsite/MAX+Tray/Tray+Acrylic.jpg"></a>
-    <div class="thumbnailTitle">
-      <figcaption>Desktop MAX Electronics Tray</figcaption>
-      <div class="thumbnailSubText">
-        <figcaption>Redesign of electronics tray conforming to UL Standards.</figcaption>
+    <div class="tile personal all">
+      <img class="thumbnail" alt="#" src="https://s3.amazonaws.com/portfoliowebsite/Desk/Desk+Assembled.jpg">
+      <div class="thumbnailTitle">
+        <figcaption>Parametric Desk</figcaption>
+        <div class="thumbnailSubText">
+          <figcaption>Parametric design of a customizable CNC desk.</figcaption>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="tile professional all">
-    <a href="#"><img class="thumbnail" alt="#" src="https://s3.amazonaws.com/portfoliowebsite/Manual+%2B2/Manual+Complete.jpg"></a>
-    <div class="thumbnailTitle">
-      <figcaption>Handibot Rotary Axes</figcaption>
-      <div class="thumbnailSubText">
-        <figcaption>Open Source multi-axis machining platform.</figcaption>
+    <div class="tile professional all">
+     <img class="thumbnail" alt="#" src="https://s3.amazonaws.com/portfoliowebsite/EOT/EOT+Cutting+Still.jpg" id="EOT">
+
+      <div class="thumbnailTitle">
+        <figcaption>Oscillating Tangential Knife</figcaption>
+        <div class="thumbnailSubText">
+          <figcaption>Integration of ECOCAM's EOT3 with ShopBot's gantry tools/control software.</figcaption>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="tile professional all">
+     <img class="thumbnail" alt="#" src="https://s3.amazonaws.com/portfoliowebsite/MAX+Tray/Tray+Acrylic.jpg">
+      <div class="thumbnailTitle">
+        <figcaption>Desktop MAX Electronics Tray</figcaption>
+        <div class="thumbnailSubText">
+          <figcaption>Redesign of electronics tray conforming to UL Standards.</figcaption>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="tile professional all">
-    <a href="#"><img class="thumbnail" alt="#" src="https://s3.amazonaws.com/portfoliowebsite/Moku/Moku+Full+Static.JPG" id="moku"></a>
-    <div class="thumbnailTitle">
-      <figcaption>Sunglasses Manufacturing</figcaption>
-      <div class="thumbnailSubText">
-        <figcaption>Turnkey CNC solution for company manufacturing wooden sunglasses.</figcaption>
+    <div class="tile professional all">
+    <img class="thumbnail" alt="#" src="https://s3.amazonaws.com/portfoliowebsite/Manual+%2B2/Manual+Complete.jpg">
+      <div class="thumbnailTitle">
+        <figcaption>Handibot Rotary Axes</figcaption>
+        <div class="thumbnailSubText">
+          <figcaption>Open Source multi-axis machining platform.</figcaption>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="tile personal all">
-    <a href="#"><img class="thumbnail" alt="#" src="https://s3.amazonaws.com/portfoliowebsite/Nelson+Bench/Nelson+Machining+Static.jpg" id="nelson"></a>
-    <div class="thumbnailTitle">
-      <figcaption>Nelson Bench</figcaption>
-      <div class="thumbnailSubText">
-        <figcaption>Parametric design of the popular Nelson Bench for digital fabrication.</figcaption>
+    <div class="tile personal all">
+     <img class="thumbnail" alt="#" src="https://s3.amazonaws.com/portfoliowebsite/Nelson+Bench/Nelson+Machining+Static.jpg" id="nelson">
+      <div class="thumbnailTitle">
+        <figcaption>Nelson Bench</figcaption>
+        <div class="thumbnailSubText">
+          <figcaption>Parametric design of the popular Nelson Bench for digital fabrication.</figcaption>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="tile professional all">
-    <a href="#"><img class="thumbnail" alt="#" src="https://s3.amazonaws.com/portfoliowebsite/PSZZP/PSZZP+FZZP+Static.jpg" id="pszzp"></a>
-    <div class="thumbnailTitle">
-      <figcaption>Pressure Sensetive Z-Zero Plate</figcaption>
-      <div class="thumbnailSubText">
-        <figcaption>Accessory for zeronig a CNC's Z-axis, accurate to within +-0.0005".</figcaption>
+    <div class="tile professional all">
+     <img class="thumbnail" alt="#" src="https://s3.amazonaws.com/portfoliowebsite/PSZZP/PSZZP+FZZP+Static.jpg" id="pszzp">
+      <div class="thumbnailTitle">
+        <figcaption>Pressure Sensetive Z-Zero Plate</figcaption>
+        <div class="thumbnailSubText">
+          <figcaption>Accessory for zeronig a CNC's Z-axis, accurate to within +-0.0005".</figcaption>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="tile personal all">
-    <a href="#"><img class="thumbnail" alt="#" src="https://s3.amazonaws.com/portfoliowebsite/Volume/Volume+Unpainted.jpg"></a>
-    <div class="thumbnailTitle">
-      <figcaption>Parametric Climbing Volumes</figcaption>
-      <div class="thumbnailSubText">
-        <figcaption>App for generating tetrahedrons of arbitray dimensions.</figcaption>
+    <div class="tile personal all">
+    <img class="thumbnail" alt="#" src="https://s3.amazonaws.com/portfoliowebsite/Volume/Volume+Unpainted.jpg">
+      <div class="thumbnailTitle">
+        <figcaption>Parametric Climbing Volumes</figcaption>
+        <div class="thumbnailSubText">
+          <figcaption>App for generating tetrahedrons of arbitray dimensions.</figcaption>
+        </div>
       </div>
     </div>
+
+
   </div>
-
-
 </div>
   
    <script src="index.js"></script>
