--- a/index.html
+++ b/index.html
@@ -399,3 +399,8 @@ The plate is currently sold as an accessory and has been incorporated directly i
     </div>
   </div>
 </div>
+
+<script src="index.js"></script>
+
+</body>
+</html>
